# MBES-lib

./: MakefileWindows
Scripts/: build_linux_installer.sh  build_win_installer.bat  set_installer_version.bat  set_installer_version.sh  sign_exes.au3  sign_installer.au3
installer/: CMakeLists.txt  build.sh
src/examples/overlap/: CMakeLists.txt
src/examples/viewer/: CMakeLists.txt
src/utils/: TimeUtils.hpp
